fixed z-index bug

--- a/css/pland.css
+++ b/css/pland.css
@@ -26,15 +26,6 @@ body {
   grid-template-rows: repeat(18, 1fr);
 }
 
-a {
-  text-decoration: none;
-  color: var(--mediumc);
-}
-
-a:visited {
-  color: var(--mediumc);
-}
-
 /* Circles */
 .circle-container {
   grid-column: 4 / 8;
@@ -184,11 +175,14 @@ hr {
 /* Circle Box */
 .btn-box {
   width: 100%;
+  height: 200px;
   font-family: 'Roboto', sans-serif;
-  font-size: 1.25em;
+  font-size: 1.75em;
+  font-weight: 500;
   color: var(--mediumc);
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr 1fr;
 }
 
 /* CIRCLE BTNS  */
@@ -208,113 +202,49 @@ hr {
   box-shadow: 0 0 0 6px rgba(65,68,77,0.5);
 }
 
-/* SubSections */
-.projects {
-  display: flex;
-}
-
-.resume {
-  display: flex;
-}
-
-.about {
-  display: flex;
-}
-
-.contact {
-  display: flex;
-}
-
-/* Section Names */
 .layer-1 {
-  position: absolute;
-  top: 135%;
-  left: 1%;
-  z-index: 1;
+  position: relative;
+  top: 100%;
   opacity: 0;
-  font-size: 1.75em;
-}
-
-.orb-1:hover {
-  cursor: pointer;
-}
-
-.orb-1:hover > .layer-1 {
-  opacity: 1;
 }
 
 .layer-2 {
-  position: absolute;
-  top: 135%;
-  left: -180%;
-  z-index: 2;
+  position: relative;
+  top: 100%;
+  left: -100%;
   opacity: 0;
-  font-size: 1.75em;
-}
-
-.orb-2:hover {
-  cursor: pointer;
-}
-
-.orb-2:hover > .layer-2 {
-  opacity: 1;
-  cursor: pointer;
 }
 
 .layer-3 {
-  position: absolute;
-  top: 135%;
-  left: -370%;
-  z-index: 3;
+  position: relative;
+  top: 100%;
+  left: -200%;
   opacity: 0;
-  font-size: 1.75em;
-}
-
-.orb-3:hover {
-  cursor: pointer;
-}
-
-.orb-3:hover > .layer-3 {
-  opacity: 1;
-  cursor: pointer;
 }
 
 .layer-4 {
-  position: absolute;
-  top: 135%;
-  left: -555%;
-  z-index: 4;
-  opacity: 0;
-  font-size: 1.75em;
-}
-
-.orb-4:hover {
-  cursor: pointer;
-}
-
-.orb-4:hover > .layer-4 {
-  opacity: 1; 
-}
-
-.orb-1 .layer-1:hover {
-  cursor: default;
+  position: relative;
+  top: 100%;
+  left: -300%;
   opacity: 0;
 }
 
-.orb-2 .layer-2:hover {
-  cursor: default;
-  opacity: 0;
+.a1:hover + .layer-1 {
+  opacity: 1;
 }
 
-.orb-3 .layer-3:hover {
-  cursor: default;
-  opacity: 0;
+.a2:hover + .layer-2 {
+  opacity: 1;
 }
 
-.orb-4 .layer-4:hover {
-  cursor: default;
-  opacity: 0;
+.a3:hover + .layer-3 {
+  opacity: 1;
 }
+
+.a4:hover + .layer-4 {
+  opacity: 1;
+}
+
 
 /* Tablet Media Query */
 @media all and (max-width:1199px) and (min-width: 768px) {
